update miui of [ics]
Change-Id: I70972ab8a2ac8538985570aa8c4b80dd9d9d7cd6

--- a/src/packages/apps/MiuiGallery/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiGallery/res/values-zh-rTW/strings.xml
@@ -41,7 +41,7 @@
     <string name="select_album" msgid="1557063764849434077">"編輯模式"</string>
     <string name="select_group" msgid="6744208543323307114">"選擇群組"</string>
     <string name="set_image" msgid="2331476809308010401">"應用為"</string>
-    <string name="camera_setas_wallpaper" msgid="797463183863414289">"桌布"</string>
+    <string name="camera_setas_wallpaper" msgid="797463183863414289">"背景"</string>
     <string name="delete" msgid="2839695998251824487">"刪除"</string>
 
     <string name="confirm_delete" msgid="7358770022173660511">"確認要刪除<xliff:g id="ITEM"> %s</xliff:g>項嗎？"</string>
@@ -196,13 +196,13 @@
     <string name="all_recent">我的最愛</string>
     <string name="photos">張照片</string>
     <string name="no_recent_album">您可以把常用的相簿我的最愛起來，便於快速查看。</string>
-    <string name="tab_lockscreen_text">解鎖桌布</string>
-    <string name="tab_wallpaper_text">桌面桌布</string>
+    <string name="tab_lockscreen_text">解鎖背景</string>
+    <string name="tab_wallpaper_text">桌面背景</string>
     <string name="tab_all_text">同時設定</string>
 
     <string name="move_cloud_data">雲相簿的資料被移動到了: %s</string>
     <string name="cloud_gallery_space_full">空間已滿，請刪除不需要的照片。</string>
-    <string name="cloud_gallery_recyclebin_full">回收站已滿，請去i.xiaomi.com清理回收站。</string>
+    <string name="cloud_gallery_recyclebin_full">回收桶已滿，請去i.xiaomi.com清理回收桶。</string>
     <string name="cloud_gallery_setting">雲相簿設定</string>
     <string name="sync_history_power_on">僅在充電時同步歷史圖片</string>
     <string name="sync_history_power_on_summary">建議開啟，否則將加速電量消耗</string>
@@ -237,12 +237,12 @@
     <string name="damaged_file">讀取失敗</string>
     <string name="must_pick_file">你必需先選擇檔案</string>
     <string name="play_video">播放影像</string>
-    <string name="set_lock_or_wallpaper">設定為桌布</string>
-    <string name="set_wallpaper">設為桌面桌布</string>
-    <string name="set_lockscreen">設定解鎖桌布</string>
+    <string name="set_lock_or_wallpaper">設定為背景</string>
+    <string name="set_wallpaper">設為桌面背景</string>
+    <string name="set_lockscreen">設定解鎖背景</string>
     <string name="show_details">詳情</string>
-    <string name="wallpaper">桌面桌布</string>
-    <string name="screen_saver_wallpaper">解鎖桌布</string>
+    <string name="wallpaper">桌面背景</string>
+    <string name="screen_saver_wallpaper">解鎖背景</string>
     <string name="contact_photo">設定為頭像</string>
     <string name="cut">裁切</string>
     <string name="turn_left">向左旋轉</string>
