--- a/src/packages/apps/XiaomiServiceFramework/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values-zh-rTW/strings.xml
@@ -146,6 +146,8 @@
     <string name="skip_setup_account_title">跳過帳戶設置</string>
     <string name="skip_setup_account_msg">使用小米帳戶可以同步備份簡訊、聯絡人、照片等各種手機數據。確認要跳過帳戶設置嗎？</string>
     <string name="account_dspt">小米帳戶可以同步備份您的簡訊、\n聯絡人、照片等各種手機數據</string>
+    <string name="removing_account">正在刪除帳號...</string>
+    <string name="checking_account">正在驗證...</string>
 
     <string name="title_payment">小米移動支付</string>
     <string name="label_order_name">商品名稱：</string>
