--- a/src/packages/apps/XiaomiServiceFramework/res/values/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values/strings.xml
@@ -146,6 +146,8 @@
     <string name="skip_setup_account_title">Skip account setting</string>
     <string name="skip_setup_account_msg">Using your Xiaomi Account, you can synchronize and backup your SMS, contacts, photos, notes, etc. Continue and setup later?</string>
     <string name="account_dspt">Xiaomi account can synchronize and backup your SMS,\ncontacts, photos, etc</string>
+    <string name="removing_account">Deleting account...</string>
+    <string name="checking_account">Verifying account...</string>
 
     <string name="title_payment">Xiaomi mobile payments</string>
     <string name="label_order_name">Product name:</string>
