--- a/src/packages/apps/MiuiGallery/res/values/strings.xml
+++ b/src/packages/apps/MiuiGallery/res/values/strings.xml
@@ -461,7 +461,7 @@
 
     <string name="move_cloud_data">Cloud album data has been moved to: %s</string>
     <string name="cloud_gallery_space_full">Cloud album space is full, please delete some needless pictures.</string>
-    <string name="cloud_gallery_recyclebin_full">Recycle bin is full, please clear recycle bin at i.xiaomi.com.</string>
+    <string name="cloud_gallery_recyclebin_full">Recycle bin is full, please go to i.xiaomi.com to clean recycle bin.</string>
     <string name="cloud_gallery_setting">Cloud album Settings</string>
     <string name="sync_history_power_on">Sync history images only when charging</string>
     <string name="sync_history_power_on_summary">Recommend to enable, otherwise battery power is consumed faster.</string>
