--- a/src/packages/apps/MiuiPhone/res/values-mcc460-mnc01-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiPhone/res/values-mcc460-mnc01-zh-rTW/strings.xml
@@ -43,4 +43,5 @@
     <string name="sim_missing_continueView_text" msgid="4199689081742026077">"不插入USIM卡，繼續操作"</string>
     <string name="sim_missing_msg_text" msgid="6803619600564142188">"找不到USIM卡。請將USIM卡插入手機。"</string>
     <string name="importingSimContacts" msgid="7374056215462575769">"匯入USIM聯絡人"</string>
+    <string name="delete_all_sim_contacts_miui">清空USIM卡連絡人</string>
 </resources>
