--- a/src/packages/apps/MiuiPhone/res/values-mcc460-mnc03-zh-rCN/strings.xml
+++ b/src/packages/apps/MiuiPhone/res/values-mcc460-mnc03-zh-rCN/strings.xml
@@ -43,4 +43,5 @@
     <string name="sim_missing_continueView_text" msgid="4199689081742026077">"无UIM卡时继续"</string>
     <string name="sim_missing_msg_text" msgid="6803619600564142188">"未找到UIM卡。请将UIM卡插入手机中。"</string>
     <string name="importingSimContacts" msgid="7374056215462575769">"正在导入UIM联系人"</string>
+    <string name="delete_all_sim_contacts_miui">清空UIM卡联系人</string>
 </resources>
