update miui of [ics]
Change-Id: Iae21e3f61dfcc342846ad3460f5d7714f2bc45bd

--- a/src/packages/apps/Contacts/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/Contacts/res/values-zh-rCN/strings.xml
@@ -610,7 +610,7 @@
     <string name="auto_nickname">智能称呼</string>
     <string name="auto_set_nickname">智能填充</string>
     <string name="restore_nickname">恢复默认</string>
-    <string name="custom_nickname_hint">输入称呼 如：“总”、“经理”、“局长”</string>
+    <string name="custom_nickname_hint">输入称呼 如：“老师”、“经理”</string>
 
     <!-- For call log action bar -->
     <plurals name="number_of_items_selected">
