--- a/src/packages/apps/Contacts/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/Contacts/res/values-zh-rTW/strings.xml
@@ -609,7 +609,7 @@
     <string name="auto_nickname">智能稱呼</string>
     <string name="auto_set_nickname">智能填充</string>
     <string name="restore_nickname">恢復默認</string>
-    <string name="custom_nickname_hint">輸入稱呼如：“總”，“經理”，“局長”</string>
+    <string name="custom_nickname_hint">輸入稱呼如：“老師”，“經理”</string>
 
     <!-- For call log action bar -->
     <plurals name="number_of_items_selected">
