update miui of [jellybean]
Change-Id: Iad7de6ec0c5448939f18c132d854597ea5c7085f

--- a/src/packages/apps/DeskClock/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/DeskClock/res/values-zh-rCN/strings.xml
@@ -191,8 +191,7 @@
     <string name="alarm_count_summary">，响铃<xliff:g id="minutes">%d</xliff:g>次后自动停止</string>
     <string name="alarm_count_never_summary">，不自动停止</string>
     <string name="shutdown_alarm_title">关机闹钟</string>
-    <string name="shutdown_alarm_enable_summary">关机闹钟已开启</string>
-    <string name="shutdown_alarm_disable_summary">关机闹钟已关闭</string>
+    <string name="shutdown_alarm_enable_summary">关机后闹钟会响</string>
 
     <string name="workday_alarm_clock">上班起床</string>
     <string name="weekend_alarm_clock">周末起床</string>
