--- a/src/packages/apps/DeskClock/res/values/strings.xml
+++ b/src/packages/apps/DeskClock/res/values/strings.xml
@@ -345,8 +345,7 @@
     <string name="alarm_count_summary">, Auto silence after <xliff:g id="minutes">%d</xliff:g> times</string>
     <string name="alarm_count_never_summary">, never stop</string>
     <string name="shutdown_alarm_title">Shutdown alarm</string>
-    <string name="shutdown_alarm_enable_summary">Shutdown alarm enabled</string>
-    <string name="shutdown_alarm_disable_summary">Shutdown alarm disabled</string>
+    <string name="shutdown_alarm_enable_summary">Enable shutdown alarm</string>
 
     <string name="workday_alarm_clock">Workday alarm</string>
     <string name="weekend_alarm_clock">Weekend alarm</string>
