--- a/src/packages/apps/DeskClock/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/DeskClock/res/values-zh-rTW/strings.xml
@@ -191,8 +191,7 @@
     <string name="alarm_count_summary">，響鈴<xliff:g id="minutes">%d</xliff:g>次後自動停止</string>
     <string name="alarm_count_never_summary">，不自動停止</string>
     <string name="shutdown_alarm_title">關機鬧鐘</string>
-    <string name="shutdown_alarm_enable_summary">關機鬧鐘已開啟</string>
-    <string name="shutdown_alarm_disable_summary">關機鬧鐘已關閉</string>
+    <string name="shutdown_alarm_enable_summary">關機後鬧鐘會響</string>
 
     <string name="workday_alarm_clock">上班起床</string>
     <string name="weekend_alarm_clock">週末起床</string>
