update miui of [ics]
Change-Id: I251e901d6aaf6fc30117d1b0c8fac80fc3e2a3ef

--- a/src/packages/apps/DeskClock/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/DeskClock/res/values-zh-rTW/strings.xml
@@ -30,7 +30,7 @@
     <string name="label" msgid="162189613902857319">"寫標籤"</string>
     <string name="default_label" msgid="5590025289805630372">"鬧鐘"</string>
     <string name="set_alarm" msgid="9148359866152726808">"設定鬧鐘"</string>
-    <string name="alarm_vibrate" msgid="3476686921490362230">"振動"</string>
+    <string name="alarm_vibrate" msgid="3476686921490362230">"震動"</string>
     <string name="alarm_repeat" msgid="7242985466344233206">"重複"</string>
     <string name="alert" msgid="6539852766423700221">"鈴聲"</string>
     <string name="time" msgid="8067216534232296518">"時間"</string>
@@ -191,8 +191,7 @@
     <string name="alarm_count_summary">，響鈴<xliff:g id="minutes">%d</xliff:g>次後自動停止</string>
     <string name="alarm_count_never_summary">，不自動停止</string>
     <string name="shutdown_alarm_title">關機鬧鐘</string>
-    <string name="shutdown_alarm_enable_summary">關機鬧鐘已開啟</string>
-    <string name="shutdown_alarm_disable_summary">關機鬧鐘已關閉</string>
+    <string name="shutdown_alarm_enable_summary">關機後鬧鐘會響</string>
 
     <string name="workday_alarm_clock">上班起床</string>
     <string name="weekend_alarm_clock">週末起床</string>
