update miui of [ics]
Change-Id: I05817ac02399d37dc6a8601073340b0c0efe07cd

--- a/src/packages/apps/MiuiGallery/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiGallery/res/values-zh-rTW/strings.xml
@@ -207,22 +207,25 @@
     <string name="sync_history_power_on">僅在充電時同步歷史圖片</string>
     <string name="sync_history_power_on_summary">建議開啟，否則將加速電量消耗</string>
     <string name="sync_only_in_wifi">僅在Wi-Fi下同步</string>
-    <string name="sync_only_in_wifi_summary">建議開啟，否則將消耗手機電量</string>
+    <string name="sync_only_in_wifi_summary">僅在Wi-Fi下才上傳照片，關閉的話會在無Wi-Fi時耗費手機流量上傳。</string>
     <string name="alert">注意</string>
     <string name="gallery_cloud_provider_name">雲相簿</string>
-    <string name="sync_album">同步雲相簿</string>
-    <string name="sync_album_summary">上傳您的照片和截圖到雲相簿中</string>
+    <string name="sync_album">啟用雲相簿</string>
+    <string name="sync_album_summary">自動上傳您拍攝的新照片和截圖到雲相簿，並在各登入裝置上同步您對相簿的更改。</string>
     <string name="account_not_login">您可以登入小米帳號，將本地圖片同步到雲端，自動上傳圖片，透過雲端管理更方便。</string>
     <string name="sync_not_open">您可以將本地圖片同步到雲端，自動上傳圖片，透過雲端管理更方便。</string>
     <string name="login_account">登入小米帳號開始同步</string>
     <string name="open_sync">立即啟用同步</string>
+    <string name="open_sync_title">請啟用雲相簿</string>
+    <string name="alert_message_open_sync">您需要先啟用雲相簿，是否立即啟用？</string>
+    <string name="open">啟用</string>
     <string name="alert_message_initial_cloud">系統將自動上傳您新建的照片和截圖，並在充電時上傳您的歷史照片和截圖，預設僅在Wi-Fi下進行所有上傳。</string>
     <string name="cloud_gallery_no_pictures">您的雲相簿沒有圖片</string>
     <string name="only_upload_in_charging">僅在充電時上傳歷史照片，如需上傳請連接電源</string>
     <string name="no_network_connected">系統未偵測到網路</string>
     <string name="modify_cloud_settings">修改同步設定</string>
     <string name="storage_no_space">存儲設備空間不足。</string>
-    <string name="add_to_cloud_album">添加至</string>
+    <string name="add_to_cloud_album">新增到</string>
     <string name="move_to_cloud_album">移動到</string>
     <string name="cant_delete_system_album"><xliff:g id="ITEM"> %s</xliff:g> 相簿是系統相簿，不允許被刪除.</string>
 
@@ -262,6 +265,15 @@
     <string name="sending_video_title">傳送影片(影片大小%s)</string>
     <string name="bigscrren_slide_exit">退出幻燈片大屏播放</string>
     <string name="defalt_local_mobile">本地手機</string>
+    <string name="add_to_cloud_folder">新增到雲相簿</string>
+    <string name="create_new_cloud_folder">新建雲相簿</string>
+    <string name="input_cloudfolder_name">輸入相簿名稱</string>
+    <string name="cloudfolder_already_exists">該雲相簿已存在</string>
+    <plurals name="number_of_cloudimages">
+        <item quantity="zero">%1$d張圖片</item>
+        <item quantity="one" >%1$d張圖片</item>
+        <item quantity="other">%1$d張圖片</item>
+    </plurals>
 
     <!-- Preference -->
     <string name="other_category">其他設定</string>
@@ -358,7 +370,7 @@
     <string name="loading_will_cost">下載大圖(約%1$dK)</string>
 
     <string name="cloud_tab_all">全部</string>
-    <string name="cloud_tab_albums">相冊</string>
+    <string name="cloud_tab_albums">相簿</string>
     <string name="cloud_tab_locations">地點</string>
-    <string name="cloud_album_set_create">新建</string>
+    <string name="cloud_album_set_create">新建相簿</string>
 </resources>
