--- a/src/packages/apps/XiaomiServiceFramework/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values-zh-rCN/strings.xml
@@ -203,7 +203,7 @@
     <string name="paytool_tenpay">财付通</string>
     <string name="recharge_denomination"><xliff:g id="value">%1$s</xliff:g>元</string>
     <string name="btn_recharge_large">立即充值</string>
-    <string name="recharge_other">选择其他支付方式</string>
+    <string name="recharge_other">选择其他充值方式</string>
 
     <string name="paytool_picker_hint">请选择充值金额</string>
     <string name="paytool_edit_hint">充值金额（元）：</string>
@@ -241,7 +241,7 @@
     <string name="btn_count_down_auto"><xliff:g id="count">%1$s</xliff:g>秒自动查询</string>
     <string name="btn_count_down_wait"><xliff:g id="count">%1$s</xliff:g>秒等候</string>
     <string name="btn_query">立即查询</string>
-    <string name="progress_querying">正在查询支付结果…</string>
+    <string name="progress_querying">正在查询充值结果…</string>
     <string name="progress_success_title"><xliff:g id="value">%1$s</xliff:g>米币充值成功</string>
     <string name="progress_success_summary">账户余额：<xliff:g id="balance">%1$s</xliff:g>米币</string>
     <string name="progress_error_title">充值失败</string>
