--- a/src/packages/apps/XiaomiServiceFramework/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values-zh-rTW/strings.xml
@@ -203,7 +203,7 @@
     <string name="paytool_tenpay">財付通</string>
     <string name="recharge_denomination"><xliff:g id="value">%1$s</xliff:g>人民幣</string>
     <string name="btn_recharge_large">立即充值</string>
-    <string name="recharge_other">選擇其他支付方式</string>
+    <string name="recharge_other">選擇其他充值方式</string>
 
     <string name="paytool_picker_hint">請選擇充值金額</string>
     <string name="paytool_edit_hint">充值金額（人民幣）：</string>
@@ -241,7 +241,7 @@
     <string name="btn_count_down_auto"><xliff:g id="count">%1$s</xliff:g>秒自動查詢</string>
     <string name="btn_count_down_wait"><xliff:g id="count">%1$s</xliff:g>秒等候</string>
     <string name="btn_query">立即查詢</string>
-    <string name="progress_querying">正在查詢支付結果…</string>
+    <string name="progress_querying">正在查詢充值結果…</string>
     <string name="progress_success_title"><xliff:g id="value">%1$s</xliff:g>米幣充值成功</string>
     <string name="progress_success_summary">賬戶余額：<xliff:g id="balance">%1$s</xliff:g>米幣</string>
     <string name="progress_error_title">充值失敗</string>
