--- a/src/packages/apps/XiaomiServiceFramework/res/values/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values/strings.xml
@@ -203,7 +203,7 @@
     <string name="paytool_tenpay">Tenpay</string>
     <string name="recharge_denomination"><xliff:g id="value">%1$s</xliff:g>RMB</string>
     <string name="btn_recharge_large">Recharge now</string>
-    <string name="recharge_other">Select other payment methods</string>
+    <string name="recharge_other">Select other recharge methods</string>
 
     <string name="paytool_picker_hint">Please select the recharge Mi Credit amount</string>
     <string name="paytool_edit_hint">Recharge amount (RMB):</string>
@@ -241,7 +241,7 @@
     <string name="btn_count_down_auto">Inquire after <xliff:g id="count">%1$s</xliff:g> seconds</string>
     <string name="btn_count_down_wait">Wait for <xliff:g id="count">%1$s</xliff:g> seconds</string>
     <string name="btn_query">Inquiry now</string>
-    <string name="progress_querying">Processing payment inquiry…</string>
+    <string name="progress_querying">Processing recharge inquiry…</string>
     <string name="progress_success_title"><xliff:g id="value">%1$s</xliff:g> Mi Credits recharge complete</string>
     <string name="progress_success_summary">Account balance: <xliff:g id="balance">%1$s</xliff:g> Mi Credits</string>
     <string name="progress_error_title">Recharge failed</string>
