update miui of [jellybean]
Change-Id: Ifa4f0029a2ac6d77f8bfe5e3542c09070d2ec743

--- a/src/packages/apps/DeskClock/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/DeskClock/res/values-zh-rTW/strings.xml
@@ -30,7 +30,7 @@
     <string name="label" msgid="162189613902857319">"寫標籤"</string>
     <string name="default_label" msgid="5590025289805630372">"鬧鐘"</string>
     <string name="set_alarm" msgid="9148359866152726808">"設定鬧鐘"</string>
-    <string name="alarm_vibrate" msgid="3476686921490362230">"振動"</string>
+    <string name="alarm_vibrate" msgid="3476686921490362230">"震動"</string>
     <string name="alarm_repeat" msgid="7242985466344233206">"重複"</string>
     <string name="alert" msgid="6539852766423700221">"鈴聲"</string>
     <string name="time" msgid="8067216534232296518">"時間"</string>
